# HPC_Learning

./: README.md  formatReadme.txt  home  home.pub
EIGEN_day_1/: .clang-format  day_1.md
EIGEN_day_1/code/: CMakeLists.txt  eigenVersion.cpp  program_1_1.cpp
EIGEN_day_2/code/: program_2_1.cpp
EIGEN_day_4/: day_4_sparseM.md
EIGEN_day_4/code/: program_4_1.cpp  run.sh
EIGEN_day_5/code/: CMakeLists.txt  program_5_1.cpp
Eigen3/EIGEN_day_1/: .clang-format  day_1.md
Eigen3/EIGEN_day_2/: day_2.md
Eigen3/EIGEN_day_2/code/: CMakeLists.txt
Eigen3/EIGEN_day_3/: .clang-format  day_3.md
Eigen3/EIGEN_day_3/code/: CMakeLists.txt  program_3_1.cpp
Eigen3/EIGEN_day_4/: day_4_sparseM.md
Eigen3/EIGEN_day_4/code/: CMakeLists.txt
Eigen3/EIGEN_day_5/: day_5.md
